<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.IntroActivty"
    android:background="@drawable/gradient_background">
    <TextView
        android:id="@+id/tv_intro_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="@dimen/splash_act_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:elevation="6dp"
        android:layout_marginTop="50dp"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:textColor="@color/white"/>
    <ImageView
        android:id="@+id/iv_world"
        android:contentDescription="@string/world_image"
        android:layout_width="400dp"
        android:layout_height="400dp"
        android:src="@drawable/world"
        app:layout_constraintTop_toBottomOf="@id/tv_intro_app_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:background="@drawable/gradient_background"
        app:layout_constraintBottom_toBottomOf="@id/iv_world"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/lets_get_started_text_size"
        android:text="@string/lets_get_started"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@id/iv_world"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:id="@+id/tv_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/intro_description_text"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/iv_world"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="@dimen/margin_size_top"/>
    <LinearLayout
        android:baselineAligned="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tv_description"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/margin_size_top"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal">
        <Button
            android:id="@+id/bt_sign_in"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="?android:attr/buttonBarButtonStyle"
            android:backgroundTint="@color/gradient_light"
            android:text="@string/sign_in_text"
            android:layout_weight="1"
            android:layout_margin="@dimen/default_item_spacing"
            android:textSize="@dimen/button_text_size"
            android:textColor="@color/gradient_dark"
            android:textStyle="bold"
            android:elevation="6dp"/>
        <Button
            android:id="@+id/bt_sign_up"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="?android:attr/buttonBarButtonStyle"
            android:backgroundTint="@color/gradient_dark"
            android:text="@string/sign_up_text"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_weight="1"
            android:layout_margin="@dimen/default_item_spacing"
            android:textSize="@dimen/button_text_size"
            android:elevation="6dp"/>



    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>