<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.ProfileActivity"
    android:background="@color/warm_white">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tb_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/gradient_background">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_text"
            android:textSize="@dimen/button_text_size"
            android:textStyle="bold"
            android:textColor="@color/white"/>
    </androidx.appcompat.widget.Toolbar>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/tb_profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="@dimen/default_item_spacing"
        app:cardCornerRadius="@dimen/button_radius"
        app:cardElevation="@dimen/cardview_default_elevation">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="@dimen/default_item_spacing">
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/iv_user_profile"
                android:layout_width="150sp"
                android:layout_height="150sp"
                android:layout_marginStart="@dimen/default_item_spacing"
                android:layout_marginEnd="@dimen/default_item_spacing"
                android:src="@drawable/person_dark"
                app:civ_border_color="@color/gradient_dark"
                app:civ_border_width="2dp"
                android:layout_gravity="center_horizontal"/>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxStrokeColor="@color/gradient_dark_faded"
                android:textColorHint="@color/gradient_dark_faded"
                app:hintTextColor="@color/gradient_dark_faded"
                android:layout_marginTop="@dimen/margin_size_top">
                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_profile_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:imeOptions="actionNext"
                    android:hint="@string/name_text"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxStrokeColor="@color/gradient_dark_faded"
                android:textColorHint="@color/gradient_dark_faded"
                app:hintTextColor="@color/gradient_dark_faded"
                android:layout_marginTop="@dimen/margin_size_top">
                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_profile_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:imeOptions="actionDone"
                    android:hint="@string/email_text"/>
            </com.google.android.material.textfield.TextInputLayout>
            <Button
                android:id="@+id/bt_profile_update"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                style="?android:attr/buttonBarButtonStyle"
                android:backgroundTint="@color/gradient_dark"
                android:text="@string/update_text"
                android:layout_weight="1"
                android:layout_margin="@dimen/default_item_spacing"
                android:textSize="@dimen/button_text_size"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:elevation="6dp"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>