<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.SignUpActivity"
    android:background="@color/warm_white">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tb_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/gradient_background">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in_text"
            android:textSize="@dimen/button_text_size"
            android:textStyle="bold"
            android:textColor="@color/white"/>

    </androidx.appcompat.widget.Toolbar>
    <TextView
        android:id="@+id/tv_sign_up_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_description_text"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/tb_sign_in"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/margin_size_top_large"
        android:textStyle="bold"
        android:textColor="@color/gradient_dark"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_size_top_large"
        app:layout_constraintTop_toBottomOf="@+id/tv_sign_up_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:elevation="6dp"
        app:cardCornerRadius="@dimen/button_radius"
        android:backgroundTint="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="@dimen/default_item_spacing">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxStrokeColor="@color/gradient_dark_faded"
                android:textColorHint="@color/gradient_dark_faded"
                app:hintTextColor="@color/gradient_dark_faded"
                android:layout_marginTop="@dimen/margin_size_top">
                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_sign_in_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/gradient_dark"
                    android:imeOptions="actionNext"
                    android:hint="@string/email_text"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_size_top"
                app:boxStrokeColor="@color/gradient_dark_faded"
                android:textColorHint="@color/gradient_dark_faded"
                app:hintTextColor="@color/gradient_dark_faded">
                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_sign_in_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/gradient_dark"
                    android:inputType="textPassword"
                    android:imeOptions="actionDone"
                    android:hint="@string/password_text"/>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/bt_sign_in_act_sign_in"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                style="?android:attr/buttonBarButtonStyle"
                android:backgroundTint="@color/gradient_dark"
                android:text="@string/sign_in_text"
                android:layout_weight="1"
                android:layout_margin="@dimen/default_item_spacing"
                android:textSize="@dimen/button_text_size"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:elevation="6dp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>